--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.1",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.15.10",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
